# hexapod_kinematics

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
include/hexapod_kinematics/: hexapod_kinematics.h
src/: hexapod_kinematics.cpp
test/: CMakeLists.txt  test_kinematics.cpp
